# text2SG

./: .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: 2026-06-09-informe-arquitectura-autoevolutiva.md  mutation-proposals.md  optimizer-roadmap.md  reflection-system-prompt.md  roadmap-benchmarks.md  synthetic-eval-loop.md
scripts/: build_public_export.ps1  propose_mutations.py  report_run.py
swarm_optimizer/: __init__.py  analysis.py  archive.py  config.py  diagnostics.py  elo.py  extractor.py  fitness.py  genome.py  gold_version.py  llm_backends.py  loop.py  meta_policy.py  mutate.py  pareto.py  rubric.py  run.py  splits.py  subsets.py  synth_data.py  validation.py
swarm_optimizer/prompts/: __init__.py  cross.py  diagnose.py  extract.py  fresh.py  meta_review.py  propose.py  verify.py
swarm_optimizer/tests/: conftest.py  test_analysis.py  test_archive.py  test_config.py  test_elo.py  test_extractor.py  test_fitness.py  test_genome.py  test_gold_version.py  test_llm_backends.py  test_loop.py  test_meta_policy.py  test_mutate.py  test_pareto.py  test_prompt_quality.py  test_rubric.py  test_splits.py  test_subsets.py  (+3 more)
tests/: conftest.py  test_analysis.py  test_config.py  test_extractor.py  test_genome.py  test_llm_backends.py  test_observability.py  test_pipeline.py  test_prompt_quality.py  test_rubric.py  test_validation.py
text2sg/: __init__.py  __main__.py  analysis.py  config.py  extractor.py  genome.py  observability.py  pipeline.py  rubric.py  validation.py
(+22 files in other folders)
